err/apitest.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/apitest'...
Listing './lib/python3.5/site-packages/apitest/actions'...
Listing './lib/python3.5/site-packages/apitest/actions/compare'...
Listing './lib/python3.5/site-packages/apitest/actions/parser'...
Listing './lib/python3.5/site-packages/apitest/actions/parser/postman'...
Listing './lib/python3.5/site-packages/apitest/actions/parser/postman/analyze'...
Listing './lib/python3.5/site-packages/apitest/actions/parser/postman/parse'...
Listing './lib/python3.5/site-packages/apitest/actions/sendto'...
Listing './lib/python3.5/site-packages/apitest/actions/sendto/proxy'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/analyze'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/unittest'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/http_methods'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/sqli'...
Listing './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/xss'...
Compiling './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/xss/xss_body.jinja2.py'...
***   File "./lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/xss/xss_body.jinja2.py", line 1
    {% if body_content %}
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/xss/xss_url.jinja2.py'...
***   File "./lib/python3.5/site-packages/apitest/actions/unittest/unittest/attacks/xss/xss_url.jinja2.py", line 1
    {%- if url_params|length != 0 %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/apitest/core'...
Listing './lib/python3.5/site-packages/apitest/utils'...
Listing './lib/python3.5/site-packages/apitest-1.0.0a2.egg-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/booby'...
Listing './lib/python3.5/site-packages/booby_ng-0.8.4.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorlog'...
Listing './lib/python3.5/site-packages/colorlog/tests'...
Listing './lib/python3.5/site-packages/colorlog-3.1.0.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/motor'...
Listing './lib/python3.5/site-packages/motor/aiohttp'...
Listing './lib/python3.5/site-packages/motor/frameworks'...
Listing './lib/python3.5/site-packages/motor/frameworks/asyncio'...
Listing './lib/python3.5/site-packages/motor/frameworks/tornado'...
Listing './lib/python3.5/site-packages/motor-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/unittesting'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/compare'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/compare/cli'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/parser'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/parser/postman'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/parser/postman/api_parsers'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/parser/postman/api_parsers/postman'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/parser/postman/cli'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/sendto'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/sendto/cli'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/unittest'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/unittest/api'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/unittest/cli'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/unittest/console'...
Listing './lib/python3.5/site-packages/tests/unittesting/actions/unittest/helpers'...
Listing './lib/python3.5/site-packages/tests/unittesting/core'...
Listing './lib/python3.5/site-packages/tests/unittesting/core/helpers'...
Listing './lib/python3.5/site-packages/tests/unittesting/core/loaders'...
Listing './lib/python3.5/site-packages/tests/unittesting/core/logger'...
Listing './lib/python3.5/site-packages/tests/unittesting/core/model'...
Listing './lib/python3.5/site-packages/tests/unittesting/core/shared_cmd_options'...
Listing './lib/python3.5/site-packages/tests/unittesting/mains'...
Listing './lib/python3.5/site-packages/tests/unittesting/utils'...
Listing './lib/python3.5/site-packages/tests/unittesting/utils/fuzzer'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
